@@ -10,8 +10,6 @@ import de.focus_shift.jollyday.core.spi.HolidayConfigurations;
 import java.time.Year;
 import java.util.List;
 
-import static java.util.stream.Collectors.toList;
-
 /**
  * The Class FixedWeekdayInMonthParser.
  */
@@ -23,6 +21,6 @@ public class FixedWeekdayInMonthParser implements HolidayParser {
       .filter(new ValidLimitation(year))
       .map(fwm -> new DescribedDateHolder(fwm, new FindWeekDayInMonth(year).apply(fwm)))
       .map(holder -> new CreateHoliday(holder.getActualDate()).apply(holder.getDescribed()))
-      .collect(toList());
+      .toList();
   }
 }
